--- a/CSGO/OpenCases/www/RUS/statistic.html
+++ b/CSGO/OpenCases/www/RUS/statistic.html
@@ -6,17 +6,56 @@
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/main.js"></script>
-</head>
-<body>
-<ul>
-<li><span id="caseOpened-text">Количество открытых кейсов: </span><span id="caseOpened"></span></li>
-<li><span id="stattrak-text">StatTrak: </span><span id="stattrak"></span></li>
-<li><span id="blue-text">Синие: </span><span id="blue"></span></li>
-<li><span id="knife-text">Ножи: </span><span id="knife"></span></li>
-<li><span id="contract-text">Контракты обмена: </span><span id="contract"></span></li>
-<li><span id="rulet-text">Рулетка выиграно/проиграно: </span><span id="rulet"></span></li>
-<ul>
 
+<script src="../scripts/navigationMenu.js"></script>
+<link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
+
+<link rel="stylesheet" type="text/css" href="../css/fonts.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
+</head>
+<style>
+body {
+	color: #fff;
+}
+table {
+    margin-top: 45px;
+    width: 100%;
+    border-collapse: collapse;
+    padding: 0 5px;
+}
+td:nth-child(2n) {
+    text-align: right;
+}
+tr {
+    line-height: 1.6em;
+}
+tr:nth-child(2n) {
+    background: rgba(255, 255, 255, 0.1);
+}
+.container {
+    padding: 0 5px;
+    font-family: LatoRegular;
+}
+</style>
+<body data-localization='statistic'>
+<div class="navigationBar" data-menu-EN="Statistic" data-menu-RU="Статистика"></div>
+<div class="container"><table>
+<tr><td id="caseOpened-text">Количество открытых кейсов: </td><td id="caseOpened"></td></tr>
+<tr><td id="stattrak-text">StatTrak: </td><td id="stattrak"></td></tr>
+<tr><td id="white-text">Белые:</td><td id="white"></td></tr>
+<tr><td id="industrial-text">Светло-синие:</td><td id="industrial"></td></tr>
+<tr><td id="blue-text">Синие:</td><td id="blue"></td></tr>
+<tr><td id="restricted-text">Фиолетовые:</td><td id="restricted"></td></tr>
+<tr><td id="classified-text">Розовые:</td><td id="classified"></td></tr>
+<tr><td id="covert-text">Красные:</td><td id="covert"></td></tr>
+<tr><td id="knife-text">Ножи: </td><td id="knife"></td></tr>
+<tr><td id="contract-text">Контракты обмена: </td><td id="contract"></td></tr>
+<tr><td id="rulet-text">Рулетка выиграно/проиграно: </td><td id="rulet"></td></tr>
+<tr><td id="rulet-max-win-text">Максимальный выигрыш в рулетке: </td><td id="rulet-max-win"></td></tr>
+</table>
+</div>
 <script>
 $(function(){
 	var i = cases.length;
@@ -27,9 +66,15 @@ $(function(){
 	}
 	$("#caseOpened").text(opened);
 	
+	stat("#white", $.cookie('weapon-consumer'));
+	stat("#industrial", $.cookie('weapon-industrial'));
 	stat("#blue", $.cookie('weapon-milspec'));
+	stat("#restricted", $.cookie('weapon-restricted'));
+	stat("#classified", $.cookie('weapon-classified'));
+	stat("#covert", $.cookie('weapon-covert'));
 	stat("#contract", $.cookie('contracts'));
 	stat('#rulet', $.cookie('rulet-wins')+"/"+$.cookie('rulet-loose'));
+	stat('#rulet-max-win', '$'+$.cookie('rulet-max-win'));
 	stat('#knife', $.cookie('knifes'));
 	stat("#stattrak", $.cookie('statTrak'));
 })
