--- a/CSGO/OpenCases/www/RUS/cases.html
+++ b/CSGO/OpenCases/www/RUS/cases.html
@@ -2,25 +2,34 @@
 <title>Список кейсов</title>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 <script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+
+<script src="../scripts/navigationMenu.js"></script>
+<link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
+
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
-</head><body style="padding-bottom: 45px;">
+</head>
+<body data-localization="cases">
+<div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
 <div class="cases">
 <div id="Default"><h1>Кейсы</h1></div>
 <div id="eSports"><h1>eSports</h1></div>
-<div id="Souvenir"><h1>Коллекции</h1></div>
+<div id="Collection"><h1>Коллекции</h1></div>
+<div id="Souvenir"><h1>Сувенирные коллекции</h1></div>
 <div id="Special"><h1>Особые</h1></div>
-</div>
-<div class="navigat">
-<div class="navigate" id="navigate-main"><- Главная страница</div><div class="navigate" id="navigate-jackpot">Рулетка</div>
 </div>
 <script>
 for(var i = 0; i < cases.length ; i++) {
 	var specialClass = (typeof cases[i].specialClass == "undefined") ? "" : cases[i].specialClass;
-	var collection = (cases[i].type == "Souvenir") ? "souvenir" : "";
+	var collection = (cases[i].type == "Souvenir") ? "souvenir" : (cases[i].type == "Collection") ? "collection" : "" ;
+	//var collection = (cases[i].type == "Collection") ? "collection" : "";
 	var curCase = "<div class='case "+collection+"' id="+i+"><img src='../images/Cases/cases/"+cases[i].img+"'><span class='name "+specialClass+"'>"+cases[i].name+"</span>";
 	switch (cases[i].type) {
 		case "Default":
@@ -34,6 +43,9 @@ for(var i = 0; i < cases.length ; i++) {
 			break;
 		case "Special":
 			$("#Special").append(curCase);
+			break;
+		case "Collection":
+			$("#Collection").append(curCase);
 			break;
 	}
 }
