SM mod by Grego

--- a/ScrapMechanic/ENG/mods.html
+++ b/ScrapMechanic/ENG/mods.html
@@ -64,6 +64,15 @@ span.over {
 </div>
 </a>
 
+<a href="mods/grego.html">
+<div class="guide">
+<img src="../images/guides/grego.jpg" width="100px" height="100px">
+<span class="title">Mod by Grego</span>
+<span class="descr">Update 12.06.2016: New parts Rims, Steam Train Wheel, Monitor controler</span>
+<span class="over"></span>
+</div>
+</a>
+
 <a href="mods/toiletSit.html">
 <div class="guide">
 <img src="http://media.indiedb.com/images/mods/1/30/29866/ScrapMechanic05122016_001415834.png" width="100px" height="100px">
