--- a/CSGO/OpenCases/www/RUS/statistic.html
+++ b/CSGO/OpenCases/www/RUS/statistic.html
@@ -74,7 +74,7 @@ $(function(){
 	stat("contract", $.cookie('contracts', Number));
 	stat('rulet', $.cookie('rulet-wins', Number)+"/"+$.cookie('rulet-loose', Number));
 	stat('rulet-max-win', '$'+$.cookie('rulet-max-win', Number));
-	stat('knife', $.cookie('knifes', Number));
+	stat('knife', $.cookie('weapon-rare', Number));
 	stat("stattrak", $.cookie('statTrak', Number));
 })
 
