--- a/ScrapMechanic/ENG/main.html
+++ b/ScrapMechanic/ENG/main.html
@@ -35,6 +35,7 @@ a {
 <div style="background: url('../images/Main_menu/Modes.png') left; background-size: cover;"><a href="modes.html" >Creative & Survival Modes</a></div>
 <!--<div style="background: url('../images/Main_menu/Handbook.png') left; background-size: cover;"><a href="handbook.html" >HandBook</a></div>-->
 <div style="background: url('../images/Main_menu/twitter.png') left; background-size: cover;"><a href="twitter.html" >Official Scrap Mechanic Tweets</a></div>
+<div style="background: url('../images/Main_menu/steam.png') left; background-size: cover;"><a href="http://store.steampowered.com/app/387990/" >Buy the game in Steam</a></div>
 <div style="background: url('../images/Main_menu/about.png') left; background-size: cover;"><a href="about.html" >About</a></div>
 <div style="background: url('../images/Main_menu/apps.png') left; background-size: cover;"><a href="http://vlados776.ucoz.ru/Android/ENG/apps.html" >Tutorials for other games</a></div>
 </body>
