--- a/ScrapMechanic/ENG/mods.html
+++ b/ScrapMechanic/ENG/mods.html
@@ -75,7 +75,7 @@ span.over {
 
 <a href="mods/toiletSit.html">
 <div class="guide">
-<img src="http://media.indiedb.com/images/mods/1/30/29866/ScrapMechanic05122016_001415834.png" width="100px" height="100px">
+<img src="https://media.indiedb.com/images/mods/1/30/29866/ScrapMechanic05122016_001415834.png" width="100px" height="100px">
 <span class="title">Toilet Driver Seat Mod</span>
 <span class="descr">Now you can connect bearings, motor etc to the toiletseat, and use it as the regular driverseat.</span>
 <span class="over"></span>
@@ -84,7 +84,7 @@ span.over {
 
 <a href="mods/TruckGasEngine.html">
 <div class="guide">
-<img src="http://media.indiedb.com/images/mods/1/30/29894/ScrapMechanic05142016_021046738.1.png" width="100px" height="100px">
+<img src="https://media.indiedb.com/images/mods/1/30/29894/ScrapMechanic05142016_021046738.1.png" width="100px" height="100px">
 <span class="title">Truck Gas Engine Mod</span>
 <span class="descr">Adds a second Gas engine to the game, with triple power for every scale in the engine settings. Made for very big veichles.</span>
 <span class="over"></span>
