Revert "SM https fix"
This reverts commit 757f30dd7d7c6029e5e06b0a15503e9e1411dbe0.

--- a/ScrapMechanic/ENG/guides.html
+++ b/ScrapMechanic/ENG/guides.html
@@ -84,7 +84,7 @@ span.over {
 
 <a href="guides/hiddenDor.html">
 <div class="guide">
-<img src="https://images.akamai.steamusercontent.com/ugc/607225753865301839/426C2ED802E9DE5FE2D49A291ECCF144DBEFD68C/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black" width="100px">
+<img src="http://images.akamai.steamusercontent.com/ugc/607225753865301839/426C2ED802E9DE5FE2D49A291ECCF144DBEFD68C/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black" width="100px">
 <span class="title">How to build a hidden door</span>
 <span class="descr">This guide is about how to make a door go into the ceiling like in the trailer.</span>
 <span class="over"></span>
@@ -93,7 +93,7 @@ span.over {
 
 <a href="guides/vertical.html">
 <div class="guide">
-<img src="https://images.akamai.steamusercontent.com/ugc/608351653777772783/E16F50EFBAAB7E2EEF380A8C624C6A2487CAD958/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black" width="100px">
+<img src="http://images.akamai.steamusercontent.com/ugc/608351653777772783/E16F50EFBAAB7E2EEF380A8C624C6A2487CAD958/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black" width="100px">
 <span class="title">A guide to Vertical Climbing!</span>
 <span class="descr">This guide will show you how to create a very simple and basic vehicle, which can do some awesome wallclimbing! I've played around with it for a while, it defies Gravity, way more reliable than you might expect it to! This little device is absolutely amazing! </span>
 <span class="over"></span>
@@ -102,7 +102,7 @@ span.over {
 
 <a href='guides/twoSwitchDoor.html'>
 <div class='guide'>
-<img src='https://images.akamai.steamusercontent.com/ugc/365157932092885373/B334A68350E7BA3D24C5A410DA151B7DA6AA4D10/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black' width='100px' height='100px'>
+<img src='http://images.akamai.steamusercontent.com/ugc/365157932092885373/B334A68350E7BA3D24C5A410DA151B7DA6AA4D10/?interpolation=lanczos-none&output-format=jpeg&output-quality=95&fit=inside|128:128&composite-to=*,*|128:128&background-color=black' width='100px' height='100px'>
 <span class='title'>How to make a simple two-switch door!</span>
 <span class='descr'>Why make logic gates when you don't need to?</span>
 <span class='over'></span>
